--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -828,7 +828,7 @@ jobs:
     steps:
       - name: Test Prerequisites
         run: |
-          apt update && apt --assume-yes install
+          apt update && apt --assume-yes install sudo
           mkdir -p ${{ env.INSTALL_DIR }} ${{ env.INSTALL_TEST_DIR }}
           mkdir -p ${TMPDIR}/not_writable_dir && sudo chattr +i ${TMPDIR}/not_writable_dir
           mkdir -p ${TMPDIR}/another_not_writable_dir && sudo chattr +i ${TMPDIR}/another_not_writable_dir
