--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -830,8 +830,8 @@ jobs:
         run: |
           apt update && apt --assume-yes install sudo
           mkdir -p ${{ env.INSTALL_DIR }} ${{ env.INSTALL_TEST_DIR }}
-          mkdir -p ${TMPDIR}/not_writable_dir && sudo chattr +i ${TMPDIR}/not_writable_dir
-          mkdir -p ${TMPDIR}/another_not_writable_dir && sudo chattr +i ${TMPDIR}/another_not_writable_dir
+          mkdir -p ${TMPDIR}/not_writable_dir && chmod a-w ${TMPDIR}/not_writable_dir
+          mkdir -p ${TMPDIR}/another_not_writable_dir && chmod a-w ${TMPDIR}/another_not_writable_dir
 
       - uses: actions/setup-python@v4
         with:
