[PT FE] Add huggingface hub tests

--- a/tests/model_hub_tests/torch_tests/requirements.txt
+++ b/tests/model_hub_tests/torch_tests/requirements.txt
@@ -5,3 +5,12 @@ pytest-html
 torch
 torchvision
 av
+transformers
+timm
+natten
+sacremoses
+sentencepiece
+datasets
+pyctcdecode
+pytorch-quantization --extra-index-url https://pypi.ngc.nvidia.com
+protobuf
