Removed warnings suppressions for extra modukes (#16479)

--- a/src/plugins/intel_cpu/CMakeLists.txt
+++ b/src/plugins/intel_cpu/CMakeLists.txt
@@ -10,6 +10,7 @@ set(TARGET_NAME "openvino_intel_cpu_plugin")
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     # C4267, 4244 issues from oneDNN headers conversion from 'XXX' to 'YYY', possible loss of data
+    ov_add_compiler_flags(/wd4018)
     ov_add_compiler_flags(/wd4267)
     ov_add_compiler_flags(/wd4244)
     # mkldnn headers: '<<': result of 32-bit shift implicitly converted to 64 bits
