--- a/src/bindings/python/CMakeLists.txt
+++ b/src/bindings/python/CMakeLists.txt
@@ -130,6 +130,32 @@ endfunction()
 
 ov_check_python_build_conditions()
 
+# check __init__.py files alignment
+
+function(ov_check_init_files_alignment)
+    # check the files in pairs
+    list(APPEND init_files
+        "${OpenVINOPython_SOURCE_DIR}/src/openvino/__init__.py"
+        "${OpenVINOPython_SOURCE_DIR}/src/compatibility/openvino/__init__.py")
+
+    list(LENGTH init_files init_files_count)
+    math(EXPR file_loop_range "${init_files_count}-2")
+    foreach(init_file_idx RANGE 0 ${file_loop_range})
+        math(EXPR init_file_idx_next "${init_file_idx}+1")
+        list(GET init_files ${init_file_idx} file1)
+        list(GET init_files ${init_file_idx_next} file2)
+
+        execute_process(COMMAND ${CMAKE_COMMAND} -E compare_files ${file1} ${file2}
+            RESULT_VARIABLE compare_result
+        )
+        if(compare_result EQUAL 1)
+            message(FATAL_ERROR "The __init__.py files are misaligned: ${file1} and ${file2}")
+        endif()
+    endforeach()
+endfunction()
+
+ov_check_init_files_alignment()
+
 ie_option(ENABLE_PYTHON "Enables OpenVINO Python API build" ${ENABLE_PYTHON_DEFAULT})
 
 #
