--- a/.github/workflows/linux_conformance.yml
+++ b/.github/workflows/linux_conformance.yml
@@ -173,7 +173,7 @@ jobs:
         run: ccache --show-stats
 
       - name: Build Conformance Tests
-        run: cmake --build ${{ env.BUILD_DIR }} --parallel --config Release --target conformanceTests apiConformanceTests func_test_utils
+        run: cmake --build ${{ env.BUILD_DIR }} --parallel --config Release --target conformanceTests apiConformanceTests
 
       - name: Cmake Layer Tests
         run: cmake -GNinja -S ${{ env.OPENVINO_REPO }}/tests/layer_tests -B ${{ env.BUILD_DIR }}/layer_tests
@@ -227,7 +227,7 @@ jobs:
       - name: Check Install Directory
         run: ls -laR ${{ env.INSTALL_DIR }}
 
-      - name: Run Conformance Tests
+      - name: Run Conformance Tests (OP)
         run: |
           
           artifact_dir=${{ env.INSTALL_DIR }}/conformance_artifacts_dir
@@ -242,11 +242,33 @@ jobs:
           
           ls -la $artifact_dir
 
+      - name: Run Conformance Tests (API)
+        run: |
+          
+          artifact_dir=${{ env.INSTALL_DIR }}/conformance_artifacts_dir_api
+          mkdir -p $artifact_dir
+          
+          source ${{ env.INSTALL_DIR }}/setupvars.sh
+          
+          python3 ${{ env.OPENVINO_REPO }}/src/tests/test_utils/functional_test_utils/layer_tests_summary/run_conformance.py -ov=${{ env.INSTALL_DIR }}/tests \
+            -d=CPU \
+            -t=API \
+            -w=$artifact_dir
+          
+          ls -la $artifact_dir
+
+      - name: Upload Conformance Artifacts (OP)
+        uses: actions/upload-artifact@v3
+        with:
+          name: conformance_artifacts_op
+          path: ${{ env.INSTALL_DIR }}/conformance_artifacts_dir
+          if-no-files-found: 'error'
+
       - name: Upload Conformance Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: conformance_artifacts
-          path: ${{ env.INSTALL_DIR }}/conformance_artifacts_dir
+          name: conformance_artifacts_api
+          path: ${{ env.INSTALL_DIR }}/conformance_artifacts_dir_api
           if-no-files-found: 'error'
 
 
