--- a/.github/ISSUE_TEMPLATE/good_first_issue.yml
+++ b/.github/ISSUE_TEMPLATE/good_first_issue.yml
@@ -41,10 +41,10 @@ body:
           Any materials related to the task, such as operator specifications,
           discussions, guides.
       value: |
-          [What is OpenVINO?](https://github.com/openvinotoolkit/openvino#what-is-openvino-toolkit)
-          [Contribution guide](https://github.com/openvinotoolkit/openvino/blob/master/CONTRIBUTING.md)
-          [Blog post on contributing to OpenVINO](https://github.com/openvinotoolkit/openvino/blob/master/CONTRIBUTING.md)
-          [User documentation](https://docs.openvino.ai/)
+          - [What is OpenVINO?](https://github.com/openvinotoolkit/openvino#what-is-openvino-toolkit)
+          - [Contribution guide](https://github.com/openvinotoolkit/openvino/blob/master/CONTRIBUTING.md)
+          - [Blog post on contributing to OpenVINO](https://github.com/openvinotoolkit/openvino/blob/master/CONTRIBUTING.md)
+          - [User documentation](https://docs.openvino.ai/)
     validations:
       required: true
 
