enable auto_func_test to ci
Signed-off-by: fishbell <bell.song@intel.com>

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -431,6 +431,12 @@ jobs:
           ${{ env.INSTALL_TEST_DIR }}/ov_auto_unit_tests --gtest_print_time=1 \
                 --gtest_output=xml:${{ env.INSTALL_TEST_DIR }}/TEST-ov_auto_unit_tests.xml
 
+      - name: AUTO FuncTests
+        run: |
+          source ${{ env.INSTALL_DIR }}/setupvars.sh
+          ${{ env.INSTALL_TEST_DIR }}/ov_auto_func_tests --gtest_print_time=1 \
+                --gtest_output=xml:${{ env.INSTALL_TEST_DIR }}/TEST-ov_auto_func_tests.xml
+
       - name: Template plugin tests
         run: |
           source ${{ env.INSTALL_DIR }}/setupvars.sh
