--- a/.github/ISSUE_TEMPLATE/build.yml
+++ b/.github/ISSUE_TEMPLATE/build.yml
@@ -89,7 +89,7 @@ body:
       label: Issue submission checklist
       description: By submitting this issue, you agree to follow our [Code of Conduct](https://github.com/intel/intel-one-mono/blob/main/CODE_OF_CONDUCT.md)
       options:
-        - label: I report the issue. It's not a question.
+        - label: I'm reporting an issue. It's not a question.
           required: true
         - label: I checked the problem with the documentation, FAQ, open issues, Stack Overflow, etc., and have not found a solution.
           required: true
