--- a/.github/ISSUE_TEMPLATE/good_first_issue.yml
+++ b/.github/ISSUE_TEMPLATE/good_first_issue.yml
@@ -1,5 +1,5 @@
 name: Good First Issue
-description: Create an Good First Issue for new contributors.
+description: Create a Good First Issue for new contributors.
 title: "[Good First Issue]: "
 labels: ["good first issue", "no_stale"]
 body:
