--- a/.github/ISSUE_TEMPLATE/performance.yml
+++ b/.github/ISSUE_TEMPLATE/performance.yml
@@ -89,15 +89,15 @@ body:
     id: model_name
     attributes:
       label: Model used
-      description: Please provide us the link to your model in the description
+      description: Link to the model
       placeholder: ResNet50 / YOLOv4
     validations:
       required: true
   - type: dropdown
     id: model_quantized
     attributes:
-      label: Quantized model?
-      description: Is your model quantized with model optimized?
+      label: Model quantization
+      description: Is your model quantized?
       options:
         - 'Yes'
         - 'No'
@@ -119,11 +119,9 @@ body:
     attributes:
       label: Performance issue description
       description: What issue are you having, and what did you expect to happen instead?
-      placeholder: Please provide a detailed description of what happened
-      value: |
-          let us know the application you use for performance tests
-          e.g., hello_classification.py / benchmark_app / own test script
-          if you are using your own test script, could this reproduce using benchmark_app?
+      placeholder: |
+          Please provide a detailed description of what happened.
+          Can the issue be reproduced using benchmark_app?
     validations:
       required: true
   - type: textarea
