--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -97,7 +97,7 @@ jobs:
 
           wget https://github.com/ninja-build/ninja/releases/download/v1.10.2/ninja-linux.zip
           unzip ninja-linux.zip
-          sudo cp -v ninja /usr/local/bin/
+          cp -v ninja /usr/local/bin/
 
       - uses: actions/setup-python@v4
         with:
