--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -34,7 +34,7 @@ jobs:
         shell: bash
     runs-on: aks-linux-16-cores
     container:
-      image: openvinogithubactions.azurecr.io/ci/ubuntu:22.04
+      image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:22.04
       volumes:
         - /mount/caches:/mount/caches
     env:
@@ -61,8 +61,8 @@ jobs:
     steps:
       - name: Install git
         run: |
-          sudo -E apt-get update
-          sudo -E apt-get install -y git git-lfs
+          apt-get update
+          apt-get install -y git git-lfs
 
       - name: Clone OpenVINO
         uses: actions/checkout@v4
@@ -91,9 +91,9 @@ jobs:
 
       - name: Install build dependencies
         run: |
-          sudo -E ${OPENVINO_REPO}/install_build_dependencies.sh
-          sudo -E apt update
-          sudo -E apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers
+          bash ${OPENVINO_REPO}/install_build_dependencies.sh
+          apt update
+          apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers
 
           wget https://github.com/ninja-build/ninja/releases/download/v1.10.2/ninja-linux.zip
           unzip ninja-linux.zip
@@ -296,7 +296,7 @@ jobs:
         shell: bash
     runs-on: aks-linux-4-cores
     container:
-      image: openvinogithubactions.azurecr.io/ci/ubuntu:22.04
+      image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:22.04
       volumes:
         - /mount/caches:/mount/caches
     env:
@@ -314,8 +314,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo -E apt update
-          sudo -E apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers libsnappy-dev
+          apt update
+          apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers libsnappy-dev
 
       - name: Download OpenVINO package
         uses: actions/download-artifact@v3
@@ -501,7 +501,7 @@ jobs:
         shell: bash
     runs-on: aks-linux-4-cores
     container:
-      image: openvinogithubactions.azurecr.io/ci/ubuntu:22.04
+      image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:22.04
       volumes:
         - /mount/caches:/mount/caches
     env:
@@ -525,8 +525,8 @@ jobs:
 
       - name: Install git
         run: |
-          sudo -E apt update
-          sudo -E apt --assume-yes install git git-lfs
+          apt update
+          apt --assume-yes install git git-lfs
 
       - name: Clone OpenVINO
         uses: actions/checkout@v4
@@ -540,8 +540,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo -E apt update
-          sudo -E apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers libsnappy-dev
+          apt update
+          apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers libsnappy-dev
 
       - uses: actions/setup-python@v4
         with:
@@ -788,7 +788,7 @@ jobs:
         shell: bash
     runs-on: aks-linux-4-cores
     container:
-      image: openvinogithubactions.azurecr.io/ci/ubuntu:22.04
+      image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:22.04
       volumes:
         - /mount/caches:/mount/caches
     env:
@@ -803,8 +803,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo -E apt update
-          sudo -E apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers libsnappy-dev
+          apt update
+          apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers libsnappy-dev
 
       - name: Download OpenVINO package
         uses: actions/download-artifact@v3
