--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -885,10 +885,11 @@ jobs:
           mkdir -p ${TMPDIR}/not_writable_dir && chmod a-w ${TMPDIR}/not_writable_dir
           mkdir -p ${TMPDIR}/another_not_writable_dir && chmod a-w ${TMPDIR}/another_not_writable_dir
 
-      - name: Install git
+      - name: Install dependencies
         run: |
           apt update
           apt --assume-yes install git git-lfs
+          apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers libsnappy-dev
 
       - name: Clone OpenVINO
         uses: actions/checkout@v4
