--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -788,13 +788,12 @@ jobs:
           python3 -m pip install --upgrade pip
           python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/functional_test_utils/requirements.txt
 
-      - name: Cache Tests Execution Time
-        id: tests-functional-cpu-cache
-        uses: actions/cache@v3
+      - name: Restore tests execution time
+        id: tests-functional-cpu-stamp
+        uses: actions/cache/restore@v3
         with:
           path: ${{ env.PARALLEL_TEST_CACHE }}
           key: ${{ runner.os }}-tests-functional-cpu-stamp-${{ github.sha }}
-          save: ${{ github.ref_name == 'master' && 'true' || 'false'  }}
           restore-keys: |
             ${{ runner.os }}-tests-functional-cpu-stamp
 
@@ -803,6 +802,14 @@ jobs:
           source ${{ env.INSTALL_DIR }}/setupvars.sh
           python3 ${{ env.PARALLEL_TEST_SCRIPT }} -e ${{ env.INSTALL_TEST_DIR }}/ov_cpu_func_tests -c ${{ env.PARALLEL_TEST_CACHE }} -w ${{ env.INSTALL_TEST_DIR }} -s suite -rf 0 -- --gtest_print_time=1 --gtest_filter=*smoke*
         timeout-minutes: 25
+
+      - name: Save tests execution time
+        uses: actions/cache/save@v3
+        id: tests-functional-cpu-stamp
+        if: ${{ github.ref_name == 'master' && 'true' || 'false'  }}
+        with:
+          path: path/to/dependencies
+          key: ${{ runner.os }}-tests-functional-cpu-stamp-${{ github.sha }}
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
