--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -791,6 +791,11 @@ jobs:
             tar -xzf openvino_tests.tar.gz -C ${{ env.INSTALL_DIR }} && rm openvino_tests.tar.gz || exit 1
           popd
 
+      - name: Install system dependencies
+        run: |
+          sudo -E apt update
+          sudo -E apt --assume-yes install libpugixml
+
       - name: Install Python wheels
         run: |
           python3 -m pip install openvino-dev --find-links=${{ env.INSTALL_DIR }}/tools
