--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -631,10 +631,10 @@ jobs:
       - name: Python API snippets
         run: |
           source ${INSTALL_DIR}/setupvars.sh
-          export PYTHONPATH=${INSTALL_TEST_DIR}:${{ github.workspace }}/openvino/docs/:$PYTHONPATH
+          export PYTHONPATH=${INSTALL_TEST_DIR}:${OPENVINO_REPO}/docs/:$PYTHONPATH
           export LD_LIBRARY_PATH=${INSTALL_TEST_DIR}:$LD_LIBRARY_PATH
 
-          python3 ${{ github.workspace }}/openvino/docs/snippets/main.py
+          python3 ${OPENVINO_REPO}/docs/snippets/main.py
 
       - name: Model Optimizer UT
         run: |
