[PT FE] Add tests for detectron2 models

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -924,8 +924,10 @@ jobs:
         run: |
           python3 -m pip install openvino --find-links=${{ env.INSTALL_DIR }}/tools
       - name: PyTorch Models Tests
+        # detectron2 requires torch to be alredy installed
         run: |
           python3 -m pip install -r ${{ env.MODEL_HUB_TESTS_INSTALL_DIR }}/torch_tests/requirements.txt
+          python3 -m pip install git+https://github.com/facebookresearch/detectron2.git 
           export PYTHONPATH=${{ env.MODEL_HUB_TESTS_INSTALL_DIR }}:$PYTHONPATH
           python3 -m pytest ${{ env.MODEL_HUB_TESTS_INSTALL_DIR }}/torch_tests/ -m ${{ env.TYPE }} --html=${{ env.INSTALL_TEST_DIR }}/TEST-torch_model_tests.html --self-contained-html
         env:
