Removed testdata repo usage

--- a/.github/workflows/code_style.yml
+++ b/.github/workflows/code_style.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: recursive
+          submodules: 'true'
 
       - name: Install clang-format-9
         run: |
@@ -49,7 +49,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: recursive
+          submodules: 'true'
 
       - name: Install ShellCheck
         run: |
@@ -80,7 +80,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: recursive
+          submodules: 'true'
 
       - name: Install Clang dependency
         run: |
