--- a/.github/workflows/mo.yml
+++ b/.github/workflows/mo.yml
@@ -20,9 +20,8 @@ jobs:
   Pylint-UT:
     runs-on: ubuntu-22.04
     steps:
+      - name: Clone OpenVINO
       - uses: actions/checkout@v4
-        with:
-          submodules: recursive
 
       - name: Setup Python
         uses: actions/setup-python@v4
