--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Clone OpenVINO
         uses: actions/checkout@v4
         with:
-          submodules: recursive
+          submodules: 'true'
 
       - name: Install dependencies
         run: |
@@ -108,7 +108,7 @@ jobs:
         run: ${{ github.workspace }}/bin/intel64/Release/ov_hetero_func_tests
 
       - name: Run IR frontend tests
-        run: ${{ github.workspace }}/bin/intel64/Release/ov_ir_frontend_tests # --gtest_print_time=1 --gtest_output=xml:${{ github.workspace }}/testdata/TEST-IRFrontend.xml
+        run: ${{ github.workspace }}/bin/intel64/Release/ov_ir_frontend_tests
 
       - name: Run ONNX frontend tests
         run: ${{ github.workspace }}/bin/intel64/Release/ov_onnx_frontend_tests --gtest_filter=-*IE_GPU*
