--- a/.github/workflows/linux_android_arm64.yml
+++ b/.github/workflows/linux_android_arm64.yml
@@ -55,7 +55,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: 'openvino'
-          submodules: 'recursive'
+
+      - name: Init submodules for non vcpkg dependencies
+        run: |
+          pushd ${{ env.OPENVINO_REPO }}
+            git submodule update --init -- ${{ env.OPENVINO_REPO }}/src/plugins
+            git submodule update --init -- ${{ env.OPENVINO_REPO }}/thirdparty/gtest
+            git submodule update --init -- ${{ env.OPENVINO_REPO }}/thirdparty/open_model_zoo
+          popd
 
       - name: Clone VCPKG
         uses: actions/checkout@v4
@@ -63,7 +70,6 @@ jobs:
           repository: 'microsoft/vcpkg'
           path: 'vcpkg'
           fetch-depth: '0'
-          submodules: 'recursive'
 
       - name: Setup Python 3.11
         uses: actions/setup-python@v4
