--- a/.github/workflows/linux_arm64.yml
+++ b/.github/workflows/linux_arm64.yml
@@ -44,8 +44,6 @@ jobs:
       OPENVINO_REPO: ${{ github.workspace }}/openvino
       BUILD_DIR: ${{ github.workspace }}/build
       INSTALL_DIR: ${{ github.workspace }}/install
-      DATA_PATH: ${{ github.workspace }}/testdata
-      MODELS_PATH: ${{ github.workspace }}/testdata
       OV_TEMP: ${{ github.workspace }}/openvino_temp
     steps:
       - name: Clone OpenVINO
@@ -152,7 +150,6 @@ jobs:
       - name: CMake configure
         run: |
           source ${{ env.BUILD_DIR }}/dependencies/conanbuild.sh
-          # TODO: return tests building once GPU plugin migrates to Plugin API 2.0
           cmake \
             -G Ninja \
             -DCMAKE_VERBOSE_MAKEFILE=ON \
@@ -166,7 +163,7 @@ jobs:
             -DPYTHON_MODULE_EXTENSION=$(aarch64-linux-gnu-python3-config --extension-suffix) \
             -DPYTHON_LIBRARY=/usr/lib/aarch64-linux-gnu/libc-2.31.so \
             -DPYTHON_INCLUDE_DIR=$(python3 -c "import sysconfig; print(sysconfig.get_path('include'))") \
-            -DENABLE_DATA=OFF \
+            -DENABLE_TESTS=ON \
             -DENABLE_SYSTEM_TBB=ON \
             -DENABLE_SYSTEM_PROTOBUF=ON \
             -DENABLE_SYSTEM_SNAPPY=ON \
