--- a/.github/workflows/linux_conditional_compilation.yml
+++ b/.github/workflows/linux_conditional_compilation.yml
@@ -43,7 +43,6 @@ jobs:
       OPENVINO_REPO: ${{ github.workspace }}/openvino
       OPENVINO_CONTRIB_REPO: ${{ github.workspace }}/openvino_contrib
       BUILD_DIR: ${{ github.workspace }}/build
-      DATA_PATH: ${{ github.workspace }}/testdata
       MODELS_PATH: ${{ github.workspace }}/testdata
       OV_TEMP: ${{ github.workspace }}/openvino_temp
       PYTHON_STATIC_ARGS: -m "not dynamic_library and not template_plugin"
@@ -52,14 +51,13 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: 'openvino'
-          submodules: 'recursive'
+          submodules: 'true'
 
-      - name: Clone testdata for C API tests
+      - name: Clone test models
         uses: actions/checkout@v3
         with:
           repository: 'openvinotoolkit/testdata'
           path: 'testdata'
-          submodules: 'recursive'
           lfs: 'true'
 
       #
