--- a/.github/workflows/linux_debian.yml
+++ b/.github/workflows/linux_debian.yml
@@ -48,8 +48,6 @@ jobs:
       INSTALL_DIR: ${{ github.workspace }}/install
       INSTALL_TEST_DIR: ${{ github.workspace }}/install/tests
       LAYER_TESTS_INSTALL_DIR: ${{ github.workspace }}/install/tests/layer_tests
-      DATA_PATH: ${{ github.workspace }}/testdata
-      MODELS_PATH: ${{ github.workspace }}/testdata
       OV_TEMP: ${{ github.workspace }}/openvino_temp
       SAMPLES_INSTALL_DIR: /usr/share/openvino/samples
       PYTHON_STATIC_ARGS: -m "not dynamic_library and not template_plugin"
@@ -58,15 +56,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: 'openvino'
-          submodules: 'recursive'
-
-      - name: Clone testdata for C API tests
-        uses: actions/checkout@v4
-        with:
-          repository: 'openvinotoolkit/testdata'
-          path: 'testdata'
-          submodules: 'recursive'
-          lfs: 'true'
+          submodules: 'true'
 
       - name: Create Directories
         run: |
