--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -882,8 +882,6 @@ jobs:
       - name: Test Prerequisites
         run: |
           mkdir -p ${{ env.INSTALL_DIR }} ${{ env.INSTALL_TEST_DIR }}
-          mkdir -p ${TMPDIR}/not_writable_dir && chmod a-w ${TMPDIR}/not_writable_dir
-          mkdir -p ${TMPDIR}/another_not_writable_dir && chmod a-w ${TMPDIR}/another_not_writable_dir
 
       - name: Install dependencies
         run: |
@@ -940,7 +938,7 @@ jobs:
         run: |
           export PYTHONPATH=${OPENVINO_REPO}/tools/mo/:${LAYER_TESTS_INSTALL_DIR}:${INSTALL_TEST_DIR}:${INSTALL_DIR}/python/python3.11:$PYTHONPATH
           source ${INSTALL_DIR}/setupvars.sh
-          python3 -m pytest -s ${INSTALL_TEST_DIR}/mo/unit_tests --junitxml=${INSTALL_TEST_DIR}/TEST-ModelOptimizer.xml
+          python3 -m pytest -s ${{ env.INSTALL_TEST_DIR }}/mo/unit_tests --junitxml=${{ env.INSTALL_TEST_DIR }}/TEST-ModelOptimizer.xml
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
