--- a/.github/workflows/build_doc.yml
+++ b/.github/workflows/build_doc.yml
@@ -62,6 +62,8 @@ jobs:
           python3 -m pip install -r docs/requirements.txt --user
           cd docs/openvino_sphinx_theme
           python3 setup.py install --user
+          cd ../openvino_custom_sphinx_sitemap
+          python3 setup.py install --user
           cd ../..
           # install doxyrest
           wget https://github.com/vovkos/doxyrest/releases/download/doxyrest-2.1.3/doxyrest-2.1.3-linux-amd64.tar.xz
