--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -480,8 +480,8 @@ jobs:
 
       - name: Hetero Unit Tests
         run: |
-          source ${{ env.INSTALL_DIR }}/setupvars.sh
-          ${{ env.INSTALL_TEST_DIR }}/ov_hetero_unit_tests --gtest_print_time=1 --gtest_output=xml:${{ env.INSTALL_TEST_DIR }}/TEST-OVHeteroUnitTests.xml
+          source ${INSTALL_DIR}/setupvars.sh
+          ${INSTALL_TEST_DIR}/ov_hetero_unit_tests --gtest_print_time=1 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-OVHeteroUnitTests.xml
 
       - name: Hetero Func Tests
         run: |
@@ -633,17 +633,17 @@ jobs:
           source ${INSTALL_DIR}/setupvars.sh
           export LD_LIBRARY_PATH=${INSTALL_TEST_DIR}:$LD_LIBRARY_PATH
 
-          python3 -m pytest -sv ${{ env.INSTALL_TEST_DIR }}/pyopenvino ${{ env.PYTHON_STATIC_ARGS }} \
-            --junitxml=${{ env.INSTALL_TEST_DIR }}/TEST-Pyngraph.xml \
-            --ignore=${{ env.INSTALL_TEST_DIR }}/pyopenvino/tests/test_utils/test_utils.py \
-            --ignore=${{ env.INSTALL_TEST_DIR }}/pyopenvino/tests/test_onnx/test_zoo_models.py \
-            --ignore=${{ env.INSTALL_TEST_DIR }}/pyopenvino/tests/test_onnx/test_backend.py
+          python3 -m pytest -sv ${INSTALL_TEST_DIR}/pyopenvino ${{ env.PYTHON_STATIC_ARGS }} \
+            --junitxml=${INSTALL_TEST_DIR}/TEST-Pyngraph.xml \
+            --ignore=${INSTALL_TEST_DIR}/pyopenvino/tests/test_utils/test_utils.py \
+            --ignore=${INSTALL_TEST_DIR/pyopenvino/tests/test_onnx/test_zoo_models.py \
+            --ignore=${INSTALL_TEST_DIR}/pyopenvino/tests/test_onnx/test_backend.py
 
       - name: Python API snippets
         run: |
-          source ${{ env.INSTALL_DIR }}/setupvars.sh
-          export PYTHONPATH=${{ env.INSTALL_TEST_DIR }}:${{ github.workspace }}/openvino/docs/:$PYTHONPATH
-          export LD_LIBRARY_PATH=${{ env.INSTALL_TEST_DIR }}:$LD_LIBRARY_PATH
+          source ${INSTALL_DIR}/setupvars.sh
+          export PYTHONPATH=${INSTALL_TEST_DIR}:${{ github.workspace }}/openvino/docs/:$PYTHONPATH
+          export LD_LIBRARY_PATH=${INSTALL_TEST_DIR}:$LD_LIBRARY_PATH
 
           python3 ${{ github.workspace }}/openvino/docs/snippets/main.py
 
@@ -838,8 +838,8 @@ jobs:
 
       - name: Intel CPU plugin func tests (parallel)
         run: |
-          source ${{ env.INSTALL_DIR }}/setupvars.sh
-          python3 ${{ env.PARALLEL_TEST_SCRIPT }} -e ${{ env.INSTALL_TEST_DIR }}/ov_cpu_func_tests -c ${{ env.PARALLEL_TEST_CACHE }} -w ${{ env.INSTALL_TEST_DIR }} -s suite -rf 0 -- --gtest_print_time=1 --gtest_filter=*smoke*
+          source ${INSTALL_DIR}/setupvars.sh
+          python3 ${PARALLEL_TEST_SCRIPT} -e ${INSTALL_TEST_DIR}/ov_cpu_func_tests -c ${PARALLEL_TEST_CACHE} -w ${INSTALL_TEST_DIR} -s suite -rf 0 -- --gtest_print_time=1 --gtest_filter=*smoke*
         timeout-minutes: 25
 
       - name: Save tests execution time
@@ -855,11 +855,11 @@ jobs:
         with:
           name: test-results-functional-cpu
           path: |
-            ${{ env.INSTALL_TEST_DIR }}/logs/failed/*.log
-            ${{ env.INSTALL_TEST_DIR }}/logs/crashed/*.log
-            ${{ env.INSTALL_TEST_DIR }}/logs/hanged/*.log
-            ${{ env.INSTALL_TEST_DIR }}/logs/interapted/*.log
-            ${{ env.INSTALL_TEST_DIR }}/logs/disabled_tests.log
+            ${INSTALL_TEST_DIR}/logs/failed/*.log
+            ${INSTALL_TEST_DIR}/logs/crashed/*.log
+            ${INSTALL_TEST_DIR}/logs/hanged/*.log
+            ${INSTALL_TEST_DIR}/logs/interapted/*.log
+            ${INSTALL_TEST_DIR}/logs/disabled_tests.log
           if-no-files-found: 'error'
 
   Python_Unit_Tests-Model_Optimizer_UT:
