[PT FE] Add tests for detectron2 models (#19888)
* [PT FE] Add tests for detectron2 models

* Fix names of tests

* Apply suggestions from code review

Co-authored-by: Roman Kazantsev <roman.kazantsev@intel.com>

* Create secondary requirements file

---------

Co-authored-by: Roman Kazantsev <roman.kazantsev@intel.com>

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -912,6 +912,7 @@ jobs:
       - name: PyTorch Models Tests
         run: |
           python3 -m pip install -r ${{ env.MODEL_HUB_TESTS_INSTALL_DIR }}/torch_tests/requirements.txt
+          python3 -m pip install -r ${{ env.MODEL_HUB_TESTS_INSTALL_DIR }}/torch_tests/requirements_secondary.txt
           export PYTHONPATH=${{ env.MODEL_HUB_TESTS_INSTALL_DIR }}:$PYTHONPATH
           python3 -m pytest ${{ env.MODEL_HUB_TESTS_INSTALL_DIR }}/torch_tests/ -m ${{ env.TYPE }} --html=${{ env.INSTALL_TEST_DIR }}/TEST-torch_model_tests.html --self-contained-html
         env:
