--- a/src/bindings/js/node/package.json
+++ b/src/bindings/js/node/package.json
@@ -34,10 +34,10 @@
   },
   "gypfile": true,
   "binary": {
-    "version": "2023.1.0.dev20230811",
+    "version": "2023.1.0.12185.47b736f63ed",
     "module_path": "./ov_runtime/",
     "package_name": "{letter}_openvino_toolkit_{os}_{version}_{arch}.{extension}",
     "host": "https://storage.openvinotoolkit.org/",
-    "remote_path": "repositories/openvino/packages/master/2023.1.0.dev20230811/"
+    "remote_path": "repositories/openvino/packages/2023.1/"
   }
 }
