enable new tests
Signed-off-by: fishbell <bell.song@intel.com>

--- a/src/plugins/auto/tests/functional/CMakeLists.txt
+++ b/src/plugins/auto/tests/functional/CMakeLists.txt
@@ -39,4 +39,5 @@ ov_add_test_target(
             Auto
 )
 
+target_compile_definitions(${TARGET_NAME} PRIVATE ${COMPILE_DEFINITIONS})
 set_ie_threading_interface_for(${TARGET_NAME})
