--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -275,7 +275,7 @@ jobs:
     defaults:
       run:
         shell: bash
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-20.04-8-cores
     strategy:
       max-parallel: 2
       fail-fast: false
