--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -356,9 +356,9 @@ jobs:
           python3 ${{ env.CONFORMANCE_TOOLS_DIR }}/run_conformance.py -ov=${{ env.INSTALL_DIR }}/tests \
             -d=CPU \
             -t=${{ matrix.TEST_TYPE }} \
-            -w=${{ env.CONFORMANCE_ARTIFACTS_DIR }}
-
-          ls -la ${{ env.CONFORMANCE_ARTIFACTS_DIR }}
+            -w=${{ env.CONFORMANCE_ARTIFACTS_DIR }} \
+            -f=${{ env.CONFORMANCE_ARTIFACTS_DIR }}/expected_failures_cpu.csv \
+            ${{ github.ref_name == 'master' && '-u' || ''  }}
 
       # Required due to: https://github.com/actions/cache/tree/main/restore#ensuring-proper-restores-and-save-happen-across-the-actions
       - name: Rename Expected Failures List
